--- a/src/styles/_settings/_layout.scss
+++ b/src/styles/_settings/_layout.scss
@@ -17,7 +17,7 @@
   }
 }
 
-$g-base-spacing: rem(18px);
+$g-base-spacing: rem(20px);
 
 $spacing-map: (
   none   : 0,
